crates/ruff/src/rules/flake8_implicit_str_concat/snapshots/ruff__rules__flake8_implicit_str_concat__tests__ISC003_ISC.py.snap
---
source: crates/ruff/src/rules/flake8_implicit_str_concat/mod.rs
expression: diagnostics
---
- kind:
    name: ExplicitStringConcatenation
    body: Explicitly concatenated string should be implicitly concatenated
    commit: ~
    fixable: false
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 17
  fix: ~
  parent: ~
- kind:
    name: ExplicitStringConcatenation
    body: Explicitly concatenated string should be implicitly concatenated
    commit: ~
    fixable: false
  location:
    row: 9
    column: 2
  end_location:
    row: 10
    column: 7
  fix: ~
  parent: ~
- kind:
    name: ExplicitStringConcatenation
    body: Explicitly concatenated string should be implicitly concatenated
    commit: ~
    fixable: false
  location:
    row: 14
    column: 2
  end_location:
    row: 15
    column: 7
  fix: ~
  parent: ~
- kind:
    name: ExplicitStringConcatenation
    body: Explicitly concatenated string should be implicitly concatenated
    commit: ~
    fixable: false
  location:
    row: 19
    column: 2
  end_location:
    row: 20
    column: 8
  fix: ~
  parent: ~

