crates/ruff/src/rules/flake8_implicit_str_concat/snapshots/ruff__rules__flake8_implicit_str_concat__tests__multiline_ISC001_ISC.py.snap
---
source: crates/ruff/src/rules/flake8_implicit_str_concat/mod.rs
expression: diagnostics
---
- - kind:
      name: SingleLineImplicitStringConcatenation
      body: Implicitly concatenated string literals on one line
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 11
    fix: ~
    parent: ~
  - kind:
      name: SingleLineImplicitStringConcatenation
      body: Implicitly concatenated string literals on one line
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 8
    end_location:
      row: 1
      column: 15
    fix: ~
    parent: ~

